--- a/alert_now/codemagic.yaml
+++ b/alert_now/codemagic.yaml
@@ -3,7 +3,7 @@ workflows:
     name: iOS Release → .ipa
     environment:
       groups:
-        - apple_credentials   # ← now pulls your credentials
+        - apple_credentials          # ← your Apple ID + app‑specific password
       vars:
         XCODE_WORKSPACE: "Runner.xcworkspace"
         XCODE_SCHEME: "Runner"
@@ -13,27 +13,53 @@ workflows:
         - push
         - tag
     scripts:
-      - name: Get Flutter packages
-        script: flutter pub get
-      - name: Install Pods
+      # -------------------------------------------------
+      # 1. Get Flutter packages
+      # -------------------------------------------------
+      - name: Get Flutter dependencies
+        script: |
+          flutter pub get
+
+      # -------------------------------------------------
+      # 2. Install CocoaPods (creates Runner.xcworkspace)
+      # -------------------------------------------------
+      - name: Install CocoaPods
         script: |
           cd ios
-          pod install
-      - name: Build .ipa
+          pod install   # <-- this creates the .xcworkspace
+
+      # -------------------------------------------------
+      # 3. Build the .app (no codesign – Codemagic will sign)
+      # -------------------------------------------------
+      - name: Build Flutter iOS (Release)
         script: |
           flutter build ios --release --no-codesign
+
+      # -------------------------------------------------
+      # 4. Archive with Xcode (creates .xcarchive)
+      # -------------------------------------------------
+      - name: Xcode Archive
+        script: |
           xcodebuild -workspace "$XCODE_WORKSPACE" \
                      -scheme "$XCODE_SCHEME" \
                      -configuration Release \
                      -allowProvisioningUpdates \
                      -archivePath $CM_BUILD_DIR/Runner.xcarchive \
                      archive
+
+      # -------------------------------------------------
+      # 5. Export .ipa (Codemagic creates exportOptions.plist)
+      # -------------------------------------------------
+      - name: Export .ipa
+        script: |
           xcodebuild -exportArchive \
                      -archivePath $CM_BUILD_DIR/Runner.xcarchive \
                      -exportOptionsPlist $FCI_BUILD_DIR/exportOptions.plist \
                      -exportPath $CM_BUILD_DIR/IPA
+
     artifacts:
       - $CM_BUILD_DIR/IPA/*.ipa
+      - build/ios/iphoneos/*.app
     publishing:
       email:
         recipients:
