--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,69 +1,22 @@
 workflows:
-  ios-release:
-    name: iOS Release → .ipa
+  ios-bypass-signing:
+    name: iOS Build (No Signing)
     environment:
-      groups:
-        - apple_credentials          # ← your Apple ID + app‑specific password
-      vars:
-        XCODE_WORKSPACE: "Runner.xcworkspace"
-        XCODE_SCHEME: "Runner"
       flutter: stable
-    triggering:
-      events:
-        - push
-        - tag
+      xcode: latest
     scripts:
-      # -------------------------------------------------
-      # 1. Get Flutter packages
-      # -------------------------------------------------
-      - name: Get Flutter dependencies
+      - name: Get dependencies
+        script: flutter pub get
+      - name: Install pods
+        script: cd ios && pod install
+      - name: Build iOS (Bypass Signing)
         script: |
-          flutter pub get
-
-      # -------------------------------------------------
-      # 2. Install CocoaPods (creates Runner.xcworkspace)
-      # -------------------------------------------------
-      - name: Install CocoaPods
-        script: |
-          cd ios
-          pod install   # <-- this creates the .xcworkspace
-
-      # -------------------------------------------------
-      # 3. Build the .app (no codesign – Codemagic will sign)
-      # -------------------------------------------------
-      - name: Build Flutter iOS (Release)
-        script: |
-          flutter build ios --release --no-codesign
-
-      # -------------------------------------------------
-      # 4. Archive with Xcode (creates .xcarchive)
-      # -------------------------------------------------
-      - name: Xcode Archive
-        script: |
-          xcodebuild -workspace "$XCODE_WORKSPACE" \
-                     -scheme "$XCODE_SCHEME" \
-                     -configuration Release \
-                     -allowProvisioningUpdates \
-                     -archivePath $CM_BUILD_DIR/Runner.xcarchive \
-                     archive
-
-      # -------------------------------------------------
-      # 5. Export .ipa (Codemagic creates exportOptions.plist)
-      # -------------------------------------------------
-      - name: Export .ipa
-        script: |
-          xcodebuild -exportArchive \
-                     -archivePath $CM_BUILD_DIR/Runner.xcarchive \
-                     -exportOptionsPlist $FCI_BUILD_DIR/exportOptions.plist \
-                     -exportPath $CM_BUILD_DIR/IPA
-
+          flutter build ios --debug --no-codesign --simulator
+          # This builds an unsigned .app for simulator
     artifacts:
-      - $CM_BUILD_DIR/IPA/*.ipa
-      - build/ios/iphoneos/*.app
+      - build/ios/iphoneos/Runner.app/**    # Unsigned app bundle
+      - build/ios/ipa/*.ipa                 # If it generates .ipa
     publishing:
       email:
         recipients:
-          - castillovinceb@hotmail.com
-        notify:
-          success: true
-          failure: true
+          - your-email@example.com
